gtfo/lang.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(exprs) {
      		return new Braces(exprs, {source: 'module'});
      	},
      peg$c1 = function(first, e) { return e; },
      peg$c2 = function(first, rest) {
      			return [first].concat(rest);
      		},
      peg$c3 = function() { return []; },
      peg$c4 = function(first, t) { return t; },
      peg$c5 = function(first, rest) {
      			return new Expression([first].concat(rest));
      		},
      peg$c6 = "'",
      peg$c7 = peg$literalExpectation("'", false),
      peg$c8 = function(t) {
      			let chars = punycode.ucs2.decode(t.join(''));
      			return new Text(chars);
      		},
      peg$c9 = "\"",
      peg$c10 = peg$literalExpectation("\"", false),
      peg$c11 = function(op) { return new Operator(op); },
      peg$c12 = peg$otherExpectation("operator"),
      peg$c13 = "...",
      peg$c14 = peg$literalExpectation("...", false),
      peg$c15 = "..",
      peg$c16 = peg$literalExpectation("..", false),
      peg$c17 = "=>",
      peg$c18 = peg$literalExpectation("=>", false),
      peg$c19 = "==",
      peg$c20 = peg$literalExpectation("==", false),
      peg$c21 = "<=",
      peg$c22 = peg$literalExpectation("<=", false),
      peg$c23 = ">=",
      peg$c24 = peg$literalExpectation(">=", false),
      peg$c25 = "//",
      peg$c26 = peg$literalExpectation("//", false),
      peg$c27 = "**",
      peg$c28 = peg$literalExpectation("**", false),
      peg$c29 = "*",
      peg$c30 = peg$literalExpectation("*", false),
      peg$c31 = "@",
      peg$c32 = peg$literalExpectation("@", false),
      peg$c33 = "+",
      peg$c34 = peg$literalExpectation("+", false),
      peg$c35 = "-",
      peg$c36 = peg$literalExpectation("-", false),
      peg$c37 = "/",
      peg$c38 = peg$literalExpectation("/", false),
      peg$c39 = "%",
      peg$c40 = peg$literalExpectation("%", false),
      peg$c41 = "&",
      peg$c42 = peg$literalExpectation("&", false),
      peg$c43 = "|",
      peg$c44 = peg$literalExpectation("|", false),
      peg$c45 = ">",
      peg$c46 = peg$literalExpectation(">", false),
      peg$c47 = function() { return '|'; },
      peg$c48 = "^",
      peg$c49 = peg$literalExpectation("^", false),
      peg$c50 = ":",
      peg$c51 = peg$literalExpectation(":", false),
      peg$c52 = "=",
      peg$c53 = peg$literalExpectation("=", false),
      peg$c54 = "<",
      peg$c55 = peg$literalExpectation("<", false),
      peg$c56 = "[",
      peg$c57 = peg$literalExpectation("[", false),
      peg$c58 = function() { return '<'; },
      peg$c59 = "?",
      peg$c60 = peg$literalExpectation("?", false),
      peg$c61 = "<|",
      peg$c62 = peg$literalExpectation("<|", false),
      peg$c63 = "|>",
      peg$c64 = peg$literalExpectation("|>", false),
      peg$c65 = function(exprlist) { return new AngleBars(exprlist); },
      peg$c66 = "<[",
      peg$c67 = peg$literalExpectation("<[", false),
      peg$c68 = "]>",
      peg$c69 = peg$literalExpectation("]>", false),
      peg$c70 = function(exprlist) { return new AngleBrackets(exprlist); },
      peg$c71 = "(",
      peg$c72 = peg$literalExpectation("(", false),
      peg$c73 = ")",
      peg$c74 = peg$literalExpectation(")", false),
      peg$c75 = function(exprlist) { return new Parens(exprlist); },
      peg$c76 = "{",
      peg$c77 = peg$literalExpectation("{", false),
      peg$c78 = "}",
      peg$c79 = peg$literalExpectation("}", false),
      peg$c80 = function(exprlist) { return new Braces(exprlist); },
      peg$c81 = "]",
      peg$c82 = peg$literalExpectation("]", false),
      peg$c83 = function(exprlist) { return new Brackets(exprlist); },
      peg$c84 = peg$otherExpectation("symbol"),
      peg$c85 = ".",
      peg$c86 = peg$literalExpectation(".", false),
      peg$c87 = function(l) { return new Symbol(l.join('')); },
      peg$c88 = peg$otherExpectation("identifier"),
      peg$c89 = function(l, mod) {
      		return new Identifier(l, mod);
      	},
      peg$c90 = peg$otherExpectation("selector"),
      peg$c91 = function(parts) { return new Identifier(parts.join(''), null); },
      peg$c92 = function(l) { return l + ':'; },
      peg$c93 = "!",
      peg$c94 = peg$literalExpectation("!", false),
      peg$c95 = function(first, rest) { return first + rest.join(''); },
      peg$c96 = /^[a-zA-Z_]/,
      peg$c97 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c98 = /^[\xA8\xAA\xAD\xAF\xB2-\xB5\xB7-\xBA]/,
      peg$c99 = peg$classExpectation(["\xA8", "\xAA", "\xAD", "\xAF", ["\xB2", "\xB5"], ["\xB7", "\xBA"]], false, false),
      peg$c100 = /^[\xBC-\xBE\xC0-\xD6\xD8-\xF6\xF8-\xFF]/,
      peg$c101 = peg$classExpectation([["\xBC", "\xBE"], ["\xC0", "\xD6"], ["\xD8", "\xF6"], ["\xF8", "\xFF"]], false, false),
      peg$c102 = /^[\u0100-\u02FF\u0370-\u167F\u1681-\u180D\u180F-\u1DBF\u1E00-\u1FFF]/,
      peg$c103 = peg$classExpectation([["\u0100", "\u02FF"], ["\u0370", "\u167F"], ["\u1681", "\u180D"], ["\u180F", "\u1DBF"], ["\u1E00", "\u1FFF"]], false, false),
      peg$c104 = /^[\u200B-\u200D\u202A-\u202E\u203F-\u2040\u2054\u2060-\u206F]/,
      peg$c105 = peg$classExpectation([["\u200B", "\u200D"], ["\u202A", "\u202E"], ["\u203F", "\u2040"], "\u2054", ["\u2060", "\u206F"]], false, false),
      peg$c106 = /^[\u2070-\u20CF\u2100-\u218F\u2460-\u24FF\u2776-\u2793\u2C00-\u2DFF\u2E80-\u2FFF]/,
      peg$c107 = peg$classExpectation([["\u2070", "\u20CF"], ["\u2100", "\u218F"], ["\u2460", "\u24FF"], ["\u2776", "\u2793"], ["\u2C00", "\u2DFF"], ["\u2E80", "\u2FFF"]], false, false),
      peg$c108 = /^[\u3004-\u3007\u3021-\u302F\u3031-\u303F\u3040-\uD7FF]/,
      peg$c109 = peg$classExpectation([["\u3004", "\u3007"], ["\u3021", "\u302F"], ["\u3031", "\u303F"], ["\u3040", "\uD7FF"]], false, false),
      peg$c110 = /^[\uF900-\uFD3D\uFD40-\uFDCF\uFDF0-\uFE1F\uFE30-\uFE44\uFE47-\uFFFD]/,
      peg$c111 = peg$classExpectation([["\uF900", "\uFD3D"], ["\uFD40", "\uFDCF"], ["\uFDF0", "\uFE1F"], ["\uFE30", "\uFE44"], ["\uFE47", "\uFFFD"]], false, false),
      peg$c112 = /^[\uD800-\uDBFF]/,
      peg$c113 = peg$classExpectation([["\uD800", "\uDBFF"]], false, false),
      peg$c114 = /^[\uDC00-\uDFFF]/,
      peg$c115 = peg$classExpectation([["\uDC00", "\uDFFF"]], false, false),
      peg$c116 = function(h, l) { return h + l; },
      peg$c117 = /^[0-9\u0300-\u036F\u1DC0-\u1DFF\u20D0-\u20FF\uFE20-\uFE2F\-]/,
      peg$c118 = peg$classExpectation([["0", "9"], ["\u0300", "\u036F"], ["\u1DC0", "\u1DFF"], ["\u20D0", "\u20FF"], ["\uFE20", "\uFE2F"], "-"], false, false),
      peg$c119 = peg$otherExpectation("number"),
      peg$c120 = "0",
      peg$c121 = peg$literalExpectation("0", false),
      peg$c122 = function() { return Integer.clone({value: 0, sourceBase: 10}); },
      peg$c123 = /^[1-9]/,
      peg$c124 = peg$classExpectation([["1", "9"]], false, false),
      peg$c125 = /^[0-9]/,
      peg$c126 = peg$classExpectation([["0", "9"]], false, false),
      peg$c127 = function(first, rest) {
      		const val = parseInt(first + rest.join(''), 10);
      		return new Integer(val, {sourceBase: 10});
      	},
      peg$c128 = function(int, digits) {
      		const fraction = parseInt(digits.join(''), 10) || 0;
      		// OOF
      	},
      peg$c129 = /^[eE]/,
      peg$c130 = peg$classExpectation(["e", "E"], false, false),
      peg$c131 = /^[+\-]/,
      peg$c132 = peg$classExpectation(["+", "-"], false, false),
      peg$c133 = function(sig, mant) {
      			return new Decimal(0.0);
      		},
      peg$c134 = "0x",
      peg$c135 = peg$literalExpectation("0x", false),
      peg$c136 = /^[1-9a-fA-F]/,
      peg$c137 = peg$classExpectation([["1", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c138 = /^[0-9a-fA-F]/,
      peg$c139 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c140 = function(pad, first, rest) { },
      peg$c141 = "0x0",
      peg$c142 = peg$literalExpectation("0x0", false),
      peg$c143 = function() { return new Integer(0, {sourceBase: 16}); },
      peg$c144 = /^[ijJ]/,
      peg$c145 = peg$classExpectation(["i", "j", "J"], false, false),
      peg$c146 = function(num) {
      		const zero = new Integer(0, {sourceBase: 10});
      		return new Complex(zero, num);
      	},
      peg$c147 = peg$otherExpectation("text"),
      peg$c148 = "\\",
      peg$c149 = peg$literalExpectation("\\", false),
      peg$c150 = "\n",
      peg$c151 = peg$literalExpectation("\n", false),
      peg$c152 = peg$anyExpectation(),
      peg$c153 = function(char) { return char; },
      peg$c154 = function(seq) { return seq; },
      peg$c155 = "a",
      peg$c156 = peg$literalExpectation("a", false),
      peg$c157 = function() { return "\x07"; },
      peg$c158 = "b",
      peg$c159 = peg$literalExpectation("b", false),
      peg$c160 = function() { return "\b"; },
      peg$c161 = "f",
      peg$c162 = peg$literalExpectation("f", false),
      peg$c163 = function() { return "\f"; },
      peg$c164 = "n",
      peg$c165 = peg$literalExpectation("n", false),
      peg$c166 = function() { return "\n"; },
      peg$c167 = "r",
      peg$c168 = peg$literalExpectation("r", false),
      peg$c169 = function() { return "\r"; },
      peg$c170 = "t",
      peg$c171 = peg$literalExpectation("t", false),
      peg$c172 = function() { return "\t"; },
      peg$c173 = "v",
      peg$c174 = peg$literalExpectation("v", false),
      peg$c175 = function() { return "\x0B"; },
      peg$c176 = "u{",
      peg$c177 = peg$literalExpectation("u{", false),
      peg$c178 = function(ch) { return ch; },
      peg$c179 = peg$otherExpectation("codepoint"),
      peg$c180 = function(ch) {
      		return String.fromCodePoint(parseInt(ch.join(''), 16));
      	},
      peg$c181 = peg$otherExpectation("hex"),
      peg$c182 = peg$otherExpectation("whitespace"),
      peg$c183 = peg$otherExpectation("separator"),
      peg$c184 = /^[,\n]/,
      peg$c185 = peg$classExpectation([",", "\n"], false, false),
      peg$c186 = /^[ \t]/,
      peg$c187 = peg$classExpectation([" ", "\t"], false, false),
      peg$c188 = /^[ \t\n]/,
      peg$c189 = peg$classExpectation([" ", "\t", "\n"], false, false),
      peg$c190 = peg$otherExpectation("comment"),
      peg$c191 = "#-",
      peg$c192 = peg$literalExpectation("#-", false),
      peg$c193 = "-#",
      peg$c194 = peg$literalExpectation("-#", false),
      peg$c195 = function(t) {
      			return new Comment(t.join(''), {source: 'inline'});
      		},
      peg$c196 = "#",
      peg$c197 = peg$literalExpectation("#", false),
      peg$c198 = function(t) {
      			return new Comment(t.join(''), {source: 'trailing'});
      		},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseexpression_list();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseexpression_list() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseexpression();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parse_S();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseexpression();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s4;
            s5 = peg$c1(s2, s6);
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parse_S();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseexpression();
            if (s6 !== peg$FAILED) {
              peg$savedPos = s4;
              s5 = peg$c1(s2, s6);
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_S();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse__();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c2(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_S();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseexpression() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseterm();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseterm();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c4(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseterm();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c4(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseterm() {
    var s0, s1, s2, s3;

    s0 = peg$parseidentifier();
    if (s0 === peg$FAILED) {
      s0 = peg$parsesymbol();
      if (s0 === peg$FAILED) {
        s0 = peg$parseanglebars();
        if (s0 === peg$FAILED) {
          s0 = peg$parseanglebracks();
          if (s0 === peg$FAILED) {
            s0 = peg$parsebrackets();
            if (s0 === peg$FAILED) {
              s0 = peg$parseparens();
              if (s0 === peg$FAILED) {
                s0 = peg$parsebraces();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsenumber();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseselector();
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      if (input.charCodeAt(peg$currPos) === 39) {
                        s1 = peg$c6;
                        peg$currPos++;
                      } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c7); }
                      }
                      if (s1 !== peg$FAILED) {
                        s2 = [];
                        s3 = peg$parsesingle_quote_string();
                        while (s3 !== peg$FAILED) {
                          s2.push(s3);
                          s3 = peg$parsesingle_quote_string();
                        }
                        if (s2 !== peg$FAILED) {
                          if (input.charCodeAt(peg$currPos) === 39) {
                            s3 = peg$c6;
                            peg$currPos++;
                          } else {
                            s3 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c7); }
                          }
                          if (s3 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c8(s2);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                      if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        if (input.charCodeAt(peg$currPos) === 34) {
                          s1 = peg$c9;
                          peg$currPos++;
                        } else {
                          s1 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c10); }
                        }
                        if (s1 !== peg$FAILED) {
                          s2 = [];
                          s3 = peg$parsedouble_quote_string();
                          while (s3 !== peg$FAILED) {
                            s2.push(s3);
                            s3 = peg$parsedouble_quote_string();
                          }
                          if (s2 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 34) {
                              s3 = peg$c9;
                              peg$currPos++;
                            } else {
                              s3 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c10); }
                            }
                            if (s3 !== peg$FAILED) {
                              peg$savedPos = s0;
                              s1 = peg$c8(s2);
                              s0 = s1;
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                        if (s0 === peg$FAILED) {
                          s0 = peg$currPos;
                          s1 = peg$parseoperator();
                          if (s1 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c11(s1);
                          }
                          s0 = s1;
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseoperator() {
    var s0, s1, s2, s3;
